--- a/config.toml
+++ b/config.toml
@@ -7,50 +7,64 @@ defaultcontentlanguage = "en"
 paginate = 20
 canonifyurls = true
 
-pygmentsstyle = "bw"
+#pygmentsstyle = "native"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 disqusShortname = "david"
 
 [params]
-    author = "David Sevilla"
-    info = "Incoming Software Engineer Intern at Facebook"
-    description = "David Sevilla's personal website"
-    keywords = "blog,developer,personal,portfolio"
-    avatarurl = "images/avatar.jpg"
+  author = "David Sevilla"
+  info = "Incoming Software Engineer Intern at Facebook"
+  description = "David Sevilla's personal website"
+  keywords = "blog,developer,personal,portfolio"
+  avatarurl = "images/avatar.jpg"
 
-    favicon_32 = "images/favicon.ico"
-    favicon_16 = "images/favicon.ico"
+  favicon_32 = "images/favicon.ico"
+  favicon_16 = "images/favicon.ico"
 
-#    footercontent = "contact@daviqsevilla.com"
+#  footercontent = "contact@daviqsevilla.com"
 
-    hidecredits = false
-    hidecopyright = false
+  hidecredits = false
+  hidecopyright = false
+  since = 2020
 
-    rtl = false
+  rtl = false
 
-    math = true
-    custom_css = ["css/custom.css"]
+  colorscheme = "auto"
+
+  math = true
+  custom_css = ["css/custom.css"]
+
+[taxonomies]
+  category = "categories"
+  series = "series"
+  tag = "tags"
 
 # Social links
 [[params.social]]
-    name = "Github"
-    icon = "fab fa-github fa-2x"
-    weight = 1
-    url = "https://github.com/dqsevilla"
+  name = "Github"
+  icon = "fab fa-github fa-2x"
+  weight = 1
+  url = "https://github.com/dqsevilla"
 [[params.social]]
-    name = "LinkedIn"
-    icon = "fab fa-linkedin fa-2x"
-    weight = 2
-    url = "https://linkedin.com/in/david-sevilla"
+  name = "LinkedIn"
+  icon = "fab fa-linkedin fa-2x"
+  weight = 2
+  url = "https://linkedin.com/in/david-sevilla"
+[[params.social]]
+  name = "Email"
+  icon = "fas fa-envelope fa-2x"
+  weight = 3
+  url = "mailto:contact@davidqsevilla.com"
+# Can add any FA icon here, and probably in the articles themselves
 
 # Menu links
 [[menu.main]]
-    name = "Blog"
-    weight = 1
-    url  = "/posts/"
+  name = "Blog"
+  weight = 1
+  url  = "/posts/"
 [[menu.main]]
-    name = "Resume"
-    weight = 2
-    url = "/resume/"
+  name = "Resume"
+  weight = 2
+  url = "/resume/"
