--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ disqusShortname = "david"
 
 [params]
   author = "David Sevilla"
-  info = "Software Engineer Intern at Facebook"
+  info = "Software Engineer at Datadog"
   description = "David Sevilla's personal website"
   keywords = "blog,developer,personal,portfolio"
   avatarurl = "images/avatar.jpg"
